# python-sdk

./: .envrc.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.md  DEPENDENCY_POLICY.md  GEMINI_BRIEFING.md  GitVersion.yml  ISSUE_262_INVESTIGATION.md  Makefile  OAUTH_ENHANCEMENT_SUMMARY.md  PR.md  PROJECT_STATUS.md  PR_671_DIAGNOSIS_REPORT.md  PR_SUBMISSION_PACKAGE.md  QUICKSTART.md  README.md  README.v2.md  REFACTORING_PLAN.md  RELEASE.md  ROADMAP.md  SECURITY.md  SETUP.md  VERSIONING.md  chinese_encoding_investigation.md  client_262.py  conformance-baseline.yml  create_pr.py  diagnose_pr_671.py  diff_with_main.txt  example_v2_server.py  example_v2_stdio_server.py  index.html  job_log.txt  job_log_new.txt  log.txt  (+18 more)
examples/: README.md  client_demo.py  example_client.py  opentelemetry_instrumentation.py  pyproject.toml  python mcp_server_client_demo.ipynb  sse_client_demo.py  test_versioning.py  tool_versioning_example.py
examples/clients/: remote_streamablehttp_client.py
examples/clients/async-reconnect-client/: README.md  pyproject.toml
examples/clients/client-connection-manager/: main.py
examples/clients/conformance-auth-client/: README.md  pyproject.toml
examples/clients/conformance-client/: pyproject.toml
examples/clients/homebrewupload-client/: README.md  main.py  pyproject.toml
examples/clients/quickstart-client/: README.md  client.py  pyproject.toml
examples/clients/simple-auth-client/: README.md  pyproject.toml
examples/clients/simple-auth-client-client-credentials/: README.md  pyproject.toml
examples/clients/simple-auth-multiprotocol-client/: README.md  pyproject.toml  run_dpop_test.sh  run_multiprotocol_test.sh  run_oauth2_test.sh
examples/clients/simple-chatbot/: README.MD  pyproject.toml
examples/clients/simple-sampling-client/: README.md  pyproject.toml
examples/clients/simple-streamable-private-gateway/: README.md  pyproject.toml
examples/clients/simple-task-client/: pyproject.toml
examples/clients/simple-task-interactive-client/: README.md  pyproject.toml
examples/clients/sse-polling-client/: README.md  pyproject.toml
examples/custom_requests/: main.py  ttl.py
examples/discovery/: README.md  ai_agent.py  progressive_discovery_server.py
examples/etdi/: comprehensive_request_signing_example.py  request_signing_example.py  rug_pull_prevention_decorator_example.py  rug_pull_prevention_demo.py  tool_decorator_rug_pull_examples.py
examples/experimental_capabilities/: main.py
examples/fastmcp/: complex_inputs.py  desktop.py  direct_call_tool_result_return.py  echo.py  icons_demo.py  logging_and_progress.py  memory.py  parameter_descriptions.py  readme-quickstart.py  resume_tokens.py  screenshot.py  simple_echo.py  stock_advisor.py  text_me.py  unicode_example.py  weather_structured.py
examples/fastmcp/socket_examples/: README.md  client.py  server.py
examples/mcpserver/: complex_inputs.py  desktop.py  direct_call_tool_result_return.py  echo.py  icons_demo.py  logging_and_progress.py  memory.py  parameter_descriptions.py  readme-quickstart.py  screenshot.py  simple_echo.py  text_me.py  unicode_example.py  weather_structured.py
examples/pluggable_transport/: client_example.py  custom_transport_client.py
examples/server-card/: README.md  pyproject.toml
examples/server-card/examples/: consume_card.py  serve_card.py
examples/server-card/mcp_server_card/: __init__.py  cli.py  client.py  schema.json  server.py  types.py  validation.py
examples/server-card/tests/: test_server_card.py
examples/servers/: structured_output_lowlevel.py  system_prompt.py
examples/servers/conformance-auth-server/: README.md  pyproject.toml
examples/servers/everything/: README.md  pyproject.toml
examples/servers/everything-server/: pyproject.toml
examples/servers/fastapi/: README.md  main.py  pyproject.toml
examples/servers/homebrewupload/: README.md  main.py  pyproject.toml
examples/servers/mrtr-options/: README.md  pyproject.toml
examples/servers/postgres-knowledge-server/: README.md  pyproject.toml
examples/servers/proxy-auth/: README.md  pyproject.toml
examples/servers/proxy_oauth/: server.py  test_logging.py
examples/servers/quickstart-server/: README.md  pyproject.toml  weather.py
examples/servers/simple-auth/: README.md  pyproject.toml
examples/servers/simple-auth-client-credentials/: README.md  pyproject.toml
examples/servers/simple-auth-multiprotocol/: README.md  pyproject.toml
examples/servers/simple-auth-remote/: pyproject.toml
examples/servers/simple-multi-tenant/: README.md  pyproject.toml
examples/servers/simple-pagination/: README.md  pyproject.toml
examples/servers/simple-prompt/: README.md  pyproject.toml
examples/servers/simple-resource/: README.md  pyproject.toml
examples/servers/simple-sampling/: README.md  pyproject.toml
examples/servers/simple-streamablehttp/: README.md  pyproject.toml
examples/servers/simple-streamablehttp-roaming/: .gitignore  Dockerfile  FILES.md  QUICKSTART.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  test_roaming.sh
examples/servers/simple-streamablehttp-stateless/: README.md  pyproject.toml
examples/servers/simple-task/: pyproject.toml
examples/servers/simple-task-interactive/: README.md  pyproject.toml
examples/servers/simple-tool/: README.md  pyproject.toml
examples/servers/simple-tool-async/: README.md  pyproject.toml
examples/servers/sqlite-async-operations/: README.md  pyproject.toml
examples/servers/sse-polling-demo/: pyproject.toml
examples/servers/structured-output-lowlevel/: pyproject.toml
examples/servers/todos-server/: README.md  pyproject.toml
examples/shared/: in_memory_task_store.py
examples/snippets/: pyproject.toml
examples/snippets/clients/: async_elicitation_client.py  cancellation.py  (+28 more)
examples/stories/: README.md  __init__.py  _harness.py  _hosting.py  manifest.toml
src/mcp/: .types.py.~undo-tree~  __init__.py  proxy.py  pyproject.toml  types.py
src/mcp-codemod/: README.md  pyproject.toml
src/mcp-types/: README.md  pyproject.toml
(+1903 files in other folders)
