[project]
name = "mcp-snippets"
version = "0.1.0"
description = "MCP Example Snippets"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["servers"]

[project.scripts]
basic-tool = "servers:run_basic_tool"
basic-resource = "servers:run_basic_resource"
basic-prompt = "servers:run_basic_prompt"
tool-progress = "servers:run_tool_progress"
sampling = "servers:run_sampling"  
elicitation = "servers:run_elicitation"
completion = "servers:run_completion"
notifications = "servers:run_notifications"