[project]
name = "mcp-async-reconnect-client"
version = "0.1.0"
description = "A client for the MCP simple-tool-async server that supports reconnection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["anyio>=4.5", "click>=8.2.0", "mcp"]

[project.scripts]
mcp-async-reconnect-client = "mcp_async_reconnect_client.client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_async_reconnect_client"]

[tool.pyright]
include = ["mcp_async_reconnect_client"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
