[project]
name = "mcp-conformance-client"
version = "0.1.0"
description = "Unified conformance test client for MCP"
requires-python = ">=3.10"
authors = [{ name = "Anthropic" }]
keywords = ["mcp", "client", "conformance", "testing"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["mcp", "httpx>=0.28.1"]

[project.scripts]
mcp-conformance-client = "mcp_conformance_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_conformance_client"]

[tool.pyright]
include = ["mcp_conformance_client"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = ["pyright>=1.1.379", "pytest>=8.3.3", "ruff>=0.6.9"]
