[project]
name = "homebrewupload-client"
version = "0.1.0"
description = "A homebrew style mcp client with file upload feature"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.72.1",
    "mcp",
]

[tool.uv.sources]
mcp = { workspace = true }
