[project]
name = "mcp-simple-auth-multiprotocol-client"
version = "0.1.0"
description = "Multi-protocol auth client (API Key + mTLS placeholder) for MCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anthropic" }]
keywords = ["mcp", "auth", "api-key", "client"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["mcp"]

[project.scripts]
mcp-simple-auth-multiprotocol-client = "mcp_simple_auth_multiprotocol_client.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_simple_auth_multiprotocol_client"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"
