[project]
name = "mcp-conformance-auth-server"
version = "0.1.0"
description = "MCP conformance auth test server for OAuth authentication testing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anthropic, PBC." }]
keywords = ["mcp", "llm", "oauth", "conformance", "testing"]
license = { text = "MIT" }
dependencies = ["click>=8.2.0", "httpx>=0.27", "mcp", "starlette", "uvicorn"]

[project.scripts]
mcp-conformance-auth-server = "mcp_conformance_auth_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_conformance_auth_server"]

[tool.pyright]
include = ["mcp_conformance_auth_server"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
