[project]
name = "mcp-mrtr-options"
version = "0.1.0"
description = "MRTR handler-shape comparison — seven options on the same weather tool (SEP-2322)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Model Context Protocol a Series of LF Projects, LLC." }]
license = { text = "MIT" }
dependencies = ["mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mrtr_options"]

[tool.uv.sources]
mcp = { workspace = true }
