[project]
name = "mcp-quickstart-server"
version = "0.1.0"
description = "Tutorial companion: a weather MCP server using the NWS API"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "mcp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_quickstart_server"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
