[project]
name = "mcp-simple-auth-multiprotocol"
version = "0.1.0"
description = "MCP Resource Server with OAuth, API Key, and Mutual TLS (placeholder) auth"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Anthropic, PBC." }]
license = { text = "MIT" }
dependencies = [
    "anyio>=4.5",
    "click>=8.2.0",
    "httpx>=0.27",
    "mcp",
    "pydantic>=2.0",
    "pydantic-settings>=2.5.2",
    "sse-starlette>=1.6.1",
    "uvicorn>=0.23.1; sys_platform != 'emscripten'",
]

[project.scripts]
mcp-simple-auth-multiprotocol-rs = "mcp_simple_auth_multiprotocol.server:main"
mcp-simple-auth-multiprotocol-prm-only-rs = "mcp_simple_auth_multiprotocol_prm_only.server:main"
mcp-simple-auth-multiprotocol-path-only-rs = "mcp_simple_auth_multiprotocol_path_only.server:main"
mcp-simple-auth-multiprotocol-root-only-rs = "mcp_simple_auth_multiprotocol_root_only.server:main"
mcp-simple-auth-multiprotocol-oauth-fallback-rs = "mcp_simple_auth_multiprotocol_oauth_fallback.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "mcp_simple_auth_multiprotocol",
    "mcp_simple_auth_multiprotocol_prm_only",
    "mcp_simple_auth_multiprotocol_path_only",
    "mcp_simple_auth_multiprotocol_root_only",
    "mcp_simple_auth_multiprotocol_oauth_fallback",
]

[dependency-groups]
dev = ["pyright>=1.1.391", "pytest>=8.3.4", "ruff>=0.8.5"]
