[project]
name = "mcp-simple-sampling"
version = "0.1.0"
description = "A simple MCP server demonstrating the sampling feature"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Model Context Protocol a Series of LF Projects, LLC." }]
keywords = ["mcp", "llm", "sampling"]
license = { text = "MIT" }
dependencies = ["click>=8.2.0", "mcp"]

[project.scripts]
mcp-simple-sampling = "mcp_simple_sampling.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_simple_sampling"]

[tool.pyright]
include = ["mcp_simple_sampling"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
