[project]
name = "mcp-sqlite-async-operations"
version = "0.1.0"
description = "Example MCP server demonstrating SQLite-based async operations storage"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["anyio>=4.5", "click>=8.2.0", "httpx>=0.27", "mcp"]

[project.scripts]
mcp-sqlite-async-operations = "mcp_sqlite_async_operations.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_sqlite_async_operations"]

[tool.pyright]
include = ["mcp_sqlite_async_operations"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
