[project]
name = "mcp-todos-server"
version = "0.1.0"
description = "Reference MCP server: a small project todo board where every server-side feature has a job"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Model Context Protocol a Series of LF Projects, LLC." }]
keywords = ["mcp", "llm", "example", "todos", "reference"]
license = { text = "MIT" }
dependencies = ["anyio>=4.5", "click>=8.2.0", "mcp", "pydantic>=2.12.0"]

[project.scripts]
mcp-todos-server = "mcp_todos_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_todos_server"]

[tool.pyright]
include = ["mcp_todos_server"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
